Tarea2/01_scheduler_/SAMV71_Xplained_Ultra/$STDERR.txt
C:\propedeutico\SAMV7x\SAMV71x\app\01_scheduler_\src\Services\mem_alloc\mem_alloc.c:4:29: error: '_heap_mem_start' undeclared here (not in a function)
     .MemStart = (uint8_t *)&_heap_mem_start,                              /* Sets the start of the heap memory */
                             ^
C:\propedeutico\SAMV7x\SAMV71x\app\01_scheduler_\src\Services\mem_alloc\mem_alloc.c:5:27: error: '_heap_mem_end' undeclared here (not in a function)
     .MemEnd = (uint8_t *)&_heap_mem_end,                                  /* Sets the end of the heap memory */
                           ^
C:\propedeutico\SAMV7x\SAMV71x\app\01_scheduler_\src\Services\mem_alloc\mem_alloc.c: In function 'Mem_Alloc':
C:\propedeutico\SAMV7x\SAMV71x\app\01_scheduler_\src\Services\mem_alloc\mem_alloc.c:20:26: error: 'remainder' undeclared (first use in this function)
     size_t offset = MEM_ALLOC_ALIGN - remainder;
                          ^
C:\propedeutico\SAMV7x\SAMV71x\app\01_scheduler_\src\Services\mem_alloc\mem_alloc.c:20:26: note: each undeclared identifier is reported only once for each function it appears in
